Resolved ie9 not respecting border radius and gradient filters

--- a/src/css/components/_range-slider.scss
+++ b/src/css/components/_range-slider.scss
@@ -21,6 +21,9 @@
 .rangeslider__fill {
   display: block;
   border-radius: 100px;
+  .no-flexbox & {
+  	border-radius: 0px;
+  }
 }
 
 .rangeslider {
