--- a/src/css/components/_range-slider.scss
+++ b/src/css/components/_range-slider.scss
@@ -1,22 +1,329 @@
 /*==============================================================
 # Range Slider
 ==============================================================*/
-
-.range-input-content-wrapper {
-	position: relative;
+.energy-rating-section {
+	background: $grayLight;
 }
 .rating-component {
 	width: 100%;
 	position: relative;
 	height: 100%;
+	float: left;
 }
 .range-input-content-wrapper {
 	float: left;
+	position: relative;
 }
-.energy-rating-section {
-	background: $grayLight;
+.range-content {
+	h3 {
+		text-align: center;
+	}
 }
-
+.vertical-component {
+	.range-plot-wrapper {
+		position: relative;
+		width: 200px;
+	 	height: 600px;
+	    padding: 60px 10px;
+		float: left;
+		text-align: right;
+		ul {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
+			li {
+				position: relative;
+				padding: 5px 0;
+				&:before {
+					position: absolute;
+					content: attr(data-detail-content);
+					color: black;
+					bottom: 40%;
+					right: 40%;
+					z-index: 10;
+					width: 175px;
+					font-size: .85em;
+					z-index: 10;
+				}
+				&.detail-group-top {
+					&:before {
+						top: 50%;
+					}
+				}
+				&:after {
+					content: "";
+					position: absolute;
+					width: 80px;
+					height: 1px;
+					background: white;
+					display: block;
+					right: -90px;
+					z-index: 1;
+					top: 50%;
+				}
+				&.details {
+					span {
+						min-width: 35px;
+		    			display: inline-block;
+		    			position: relative;
+		    			&:before {
+							content: "";
+							position: absolute;
+							right: 115%;
+							top: 50%;
+							background: black;
+							z-index: 1;
+							display: block;
+							height: 1px;
+							width: 20px;
+						}
+					}
+				}
+				&.detail-group {
+					span {
+						&:before {
+							content: "";
+							position: absolute;
+							right: 115%;
+							top: 50%;
+							background: black;
+							z-index: 1;
+							display: block;
+							height: 1px;
+							width: 10px;
+						}
+					}
+				}
+				&.detail-group-top {
+					span {
+						&:after {
+							content: "";
+							height: calc(150% - 1px);
+							width: 1px;
+							display: block;
+							position: absolute;
+							background: black;
+							top: 50%;
+							right: calc(115% + 10px);
+						}
+					}
+				}
+				&.detail-group-bottom {
+					span {
+						&:after {
+							content: "";
+							height: 1px;
+							width: 10px;
+							display: block;
+							position: absolute;
+							background: black;
+							top: -25%;
+							right: calc(115% + 10px);
+						}
+					}
+				}
+			}
+		}
+	}
+	.range-content {
+		opacity: 0;
+		width: 700px;
+		position: absolute;
+		left: 150px;
+		top: 50%;
+		transform: translate(5%, -50%);
+		background: white;
+		border: 1px solid $grayLight;
+		padding: 20px;
+		transition: .3s $cbTrans all;
+		&.active {
+			opacity: 1;
+			transform: translate(0%, -50%);
+			&.disabled {
+				/*opacity: .8;*/
+			}
+		}
+		&:after {
+			content: "";
+			display: inline-block;
+			border-top: 0px solid $white;
+			border-left: 30px solid $white;
+			border-bottom: 30px solid transparent;
+			box-shadow: -1px -1px 0 1px $grayLight;
+			position: absolute;
+			left: -15px;
+			top: 50%;
+			transform: translateY(-50%) rotate(-45deg);
+		}
+	}
+}
+.horizontal-component {
+	.range-input-content-wrapper { 
+		width: 100%;
+	}
+	.range-plot-wrapper {
+		/*position: absolute;*/
+		width: 100%;
+	 	height: 150px;
+	    padding: 10px 55px;
+		float: left;
+		text-align: center;
+		bottom: 0;
+		margin: 0 0 -100px;
+		ul {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			flex-direction: row;
+			justify-content: space-evenly;
+			li {
+				position: relative;
+				padding: 0;
+				width: 30px;
+    			text-align: center;
+				&:before {
+					position: absolute;
+					content: attr(data-detail-content);
+					color: black;
+					top: 100%;
+					left: 50%;
+					z-index: 10;
+					width: 175px;
+					font-size: .85em;
+					transform: translateX(-50%);
+					z-index: 10;
+				}
+				&.detail-group-top {
+					&:before {
+						top: 100%;
+					}
+				}
+				&:after {
+					content: "";
+					position: absolute;
+					height: 80px;
+					width: 1px;
+					background: white;
+					display: block;
+					top: 40px;
+					z-index: 1;
+					left: 50%;
+					transform: translateX(-50%);
+					backface-visibility: hidden;
+				}
+				&.details {
+					span {
+						min-width: 35px;
+		    			display: inline-block;
+		    			position: relative;
+		    			&:before {
+							content: "";
+							position: absolute;
+							right: 115%;
+							top: 50%;
+							background: black;
+							z-index: 1;
+							display: block;
+							height: 1px;
+							width: 20px;
+							display: none;
+						}
+					}
+				}
+				&.detail-group {
+					span {
+						&:before {
+							content: "";
+							position: absolute;
+							right: 115%;
+							top: 50%;
+							background: black;
+							z-index: 1;
+							display: block;
+							height: 1px;
+							width: 10px;
+							display: none;
+						}
+					}
+				}
+				&.detail-group-top {
+					span {
+						&:after {
+							content: "";
+							height: calc(150% - 1px);
+							width: 1px;
+							display: block;
+							position: absolute;
+							background: black;
+							top: 50%;
+							right: calc(115% + 10px);
+							display: none;
+						}
+					}
+				}
+				&.detail-group-bottom {
+					span {
+						&:after {
+							content: "";
+							height: 1px;
+							width: 10px;
+							display: block;
+							position: absolute;
+							background: black;
+							top: -25%;
+							right: calc(115% + 10px);
+							display: none;
+						}
+					}
+				}
+			}
+		}
+	}
+	.range-content {
+		opacity: 0;
+		width: 700px;
+		position: absolute;
+		left: 50%;
+		top: 185%;
+		transform: translate(-50%, 5%);
+		background: white;
+		border: 1px solid $grayLight;
+		padding: 20px;
+		transition: .3s $cbTrans all;
+		&.active {
+			opacity: 1;
+			transform: translate(-50%, 0%);
+			&.disabled {
+				/*opacity: .8;*/
+			}
+		}
+		&:after {
+			content: "";
+			display: inline-block;
+			border-top: 30px solid $white;
+			border-right: 30px solid $white;
+			border-bottom: 0px solid $white;
+			box-shadow: -1px -1px 0 1px $grayLight;
+			position: absolute;
+			top: -15px;
+			left: 50%;
+			transform: translateX(-50%) rotate(45deg);
+		}
+	}
+}
+.savings {
+	float: left;
+	width: 100%;
+	border: 1px solid $grayLight;
+	padding: 5px;
+	.home-value {
+		display: block;
+		float: left;
+		width: 50%;
+	}
+}
 .rangeslider,
 .rangeslider__fill {
   display: block;
@@ -24,20 +331,107 @@
   .no-flexbox & {
   	border-radius: 0px;
   }
+  &:before,
+  &:after {
+  	transition: .3s $cbTrans all;
+  }
 }
-
 .rangeslider {
   background-color: #e6e6e6;
-  background-image: linear-gradient(to bottom, #ee3624, #edb220, #aeca37);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ee3624', endColorstr='#aeca37',GradientType=0 ); 
   position: relative;
+  box-shadow: 0 0 0 5px white;
 }
-
+.disable-end-status {
+	.rangeslider--vertical {
+		&:before {
+			opacity: 0;
+		}
+	}
+	.rangeslider--horizontal {
+		&:after {
+			opacity: 0;
+		}
+	}
+}
 .rangeslider--horizontal {
-  height: 20px;
-  width: 100%;
+	&.disable-begin-status {
+		&:before {
+			opacity: 0;
+		}
+	}
+	&.disable-end-status {
+		&:after {
+			opacity: 0;
+		}
+	}
 }
-
+.rangeslider--vertical {
+	&.disable-begin-status {
+		&:after {
+			opacity: 0;
+		}
+	}
+	&.disable-end-status {
+		&:before {
+			opacity: 0;
+		}
+	}
+}
+.rangeslider--horizontal {
+	height: 80px;
+	min-width: 600px;
+	width: 100%;
+	background-image: linear-gradient(to right, #ee3624, #edb220, #aeca37);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ee3624', endColorstr='#aeca37',GradientType=0 ); 
+	&:before,
+	&:after {
+		display: inline-block;
+		position: absolute;
+		width: 90px;
+		padding: 0px;
+		text-align: center;
+		z-index: 1;
+		top: 50%;
+		text-transform: uppercase;
+		font-size: .65em;
+		font-weight: bold;
+		color: $white;
+	}
+	&:before {
+		content: "Poor Energy Preformance";
+		left: 15px;
+		transform: translateY(-50%);
+	}
+	&:after {
+		content: "Best Energy Preformance";
+		right: 15px;
+		transform: translateY(-50%);
+	}
+	.rangeslider__fill {
+		bottom: 0;
+  		width: 100%;
+  	}
+  	.rangeslider__handle {
+  		&:after {
+  			width: 65px;
+  			height: 65px;
+  		}
+		.arrows {
+			&:after,
+			&:before {
+			  top: 50%;
+			}
+			&:before {
+				left: -20px;
+				transform: translateY(-50%) rotate(-45deg);
+			}
+			&:after {
+				right: -20px;
+				transform: translateY(-50%) rotate(-225deg);
+			}
+		}
+	}
+}
 .rangeslider--vertical {
 	width: 80px;
 	min-height: 600px;
@@ -45,7 +439,8 @@
 	padding: 10px;
 	display: inline-block;
 	position: relative;
-	box-shadow: 0 0 0 5px white;
+	background-image: linear-gradient(to bottom, #ee3624, #edb220, #aeca37);
+  	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ee3624', endColorstr='#aeca37',GradientType=0 ); 
 	&:before,
 	&:after {
 		display: inline-block;
@@ -70,6 +465,26 @@
 		bottom: 10px;
 		transform: translateX(-50%);
 	}
+	.rangeslider__fill {
+  		top: 0;
+  		height: 100%;
+	}
+	.rangeslider__handle {
+		.arrows {
+			&:after,
+			&:before {
+			  left: 50%;
+			}
+			&:before {
+				top: -20px;
+				transform: translateX(-50%) rotate(45deg);
+			}
+			&:after {
+				bottom: -20px;
+				transform: translateX(-50%) rotate(225deg);
+			}
+		}
+	}
 }
 
 .rangeslider--disabled {
@@ -79,14 +494,6 @@
 
 .rangeslider__fill {
   position: absolute;
-}
-.rangeslider--horizontal .rangeslider__fill {
-  top: 0;
-  height: 100%;
-}
-.rangeslider--vertical .rangeslider__fill {
-  bottom: 0;
-  width: 100%;
 }
 .rangeslider__handle {
 	background: white;
@@ -134,19 +541,10 @@
 		  content: "";
 		  display: block;
 		  position: absolute;
-		  left: 50%;
 		  height: 20px;
 		  width: 20px;
 		  border-left: 1px solid white;
 		  border-top: 1px solid white;
-		}
-		&:before {
-			top: -20px;
-			transform: translateX(-50%) rotate(45deg);
-		}
-		&:after {
-			bottom: -20px;
-			transform: translateX(-50%) rotate(225deg);
 		}
 	}
 }
@@ -170,154 +568,3 @@ input[type="range"]:focus + .rangeslider .rangeslider__handle {
   box-shadow: 0 0 8px rgba(255, 255, 255, 0.9);
 }
 
-.range-plot-wrapper {
-	position: relative;
-	width: 200px;
- 	height: 600px;
-    padding: 60px 10px;
-	float: left;
-	text-align: right;
-	ul {
-		width: 100%;
-		height: 100%;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-around;
-		li {
-			position: relative;
-			padding: 5px 0;
-			&:before {
-				position: absolute;
-				content: attr(data-detail-content);
-				color: black;
-				bottom: 40%;
-				right: 40%;
-				z-index: 10;
-				width: 175px;
-				font-size: .85em;
-				z-index: 10;
-			}
-			&.detail-group-top {
-				&:before {
-					top: 50%;
-				}
-			}
-			&:after {
-				content: "";
-				position: absolute;
-				width: 80px;
-				height: 1px;
-				background: white;
-				display: block;
-				right: -90px;
-				z-index: 1;
-				top: 50%;
-			}
-			&.details {
-				span {
-					min-width: 35px;
-	    			display: inline-block;
-	    			position: relative;
-	    			&:before {
-						content: "";
-						position: absolute;
-						right: 115%;
-						top: 50%;
-						background: black;
-						z-index: 1;
-						display: block;
-						height: 1px;
-						width: 20px;
-					}
-				}
-			}
-			&.detail-group {
-				span {
-					&:before {
-						content: "";
-						position: absolute;
-						right: 115%;
-						top: 50%;
-						background: black;
-						z-index: 1;
-						display: block;
-						height: 1px;
-						width: 10px;
-					}
-				}
-			}
-			&.detail-group-top {
-				span {
-					&:after {
-						content: "";
-						height: calc(150% - 1px);
-						width: 1px;
-						display: block;
-						position: absolute;
-						background: black;
-						top: 50%;
-						right: calc(115% + 10px);
-					}
-				}
-			}
-			&.detail-group-bottom {
-				span {
-					&:after {
-						content: "";
-						height: 1px;
-						width: 10px;
-						display: block;
-						position: absolute;
-						background: black;
-						top: -25%;
-						right: calc(115% + 10px);
-					}
-				}
-			}
-		}
-	}
-}
-
-.range-content {
-	opacity: 0;
-	width: 700px;
-	position: absolute;
-	left: 150px;
-	top: 50%;
-	transform: translate(5%, -50%);
-	background: white;
-	border: 1px solid $grayLight;
-	padding: 20px;
-	transition: .3s $cbTrans all;
-	&.active {
-		opacity: 1;
-		transform: translate(0%, -50%);
-		&.disabled {
-			/*opacity: .8;*/
-		}
-	}
-	&:after {
-		content: "";
-		display: inline-block;
-		border-top: 0px solid $white;
-		border-left: 30px solid $white;
-		border-bottom: 30px solid transparent;
-		box-shadow: -1px -1px 0 1px $grayLight;
-		position: absolute;
-		left: -15px;
-		top: 50%;
-		transform: translateY(-50%) rotate(-45deg);
-	}
-}
-
-.savings {
-	float: left;
-	width: 100%;
-	border: 1px solid $grayLight;
-	padding: 5px;
-	.home-value {
-		display: block;
-		float: left;
-		width: 50%;
-	}
-}
