--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -16,4 +16,5 @@
     'components/_header',
     'components/_footer',
     'components/_image-map',
+    'components/_range-charts',
     'components/_range-slider';
