--- a/src/css/utilities/_variables.scss
+++ b/src/css/utilities/_variables.scss
@@ -16,6 +16,9 @@ $purple: 						#772B90;
 $yellow: 						#FFBD00;
 $blue:							#22A3F1;
 $teal:							#12E9DA;
+$red:							#ee3624;
+$green:							#aeca37;
+$orange:						#edb220;
 
 
 // Scaffolding
