--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -17,4 +17,5 @@
     'components/_footer',
     'components/_image-map',
     'components/_range-charts',
-    'components/_range-slider';
+    'components/_range-slider',
+    'components/_bar-charts';
